# pyMRzeroXCAT

./: .gitignore  README.md  mrxcat.py  pyproject.toml  requirements.txt
MRXCAT_CMR_CINE/: mrxcat_cmr_cine.py
MRXCAT_CMR_PERF/: mrxcat_cmr_perf.py  perf_par.py
examples/: simulate_MRXCAT_Flash2D.ipynb
pymrxcat/: visualize.py  visualize_phantom.py
pymrxcat/MRXCAT_CMR_CINE/: mrxcat_cmr_cine.py
pymrxcat/MRXCAT_CMR_PERF/: mrxcat_cmr_perf.py
pymrxcat/MRXCAT_PHANTOM_LGE/: lge_par.py  mrxcat_phantom_lge.py
pymrzeroxcat/: convert_arguments.py  mrxcat.py  read_mrxcat_raw_data.py  tissues.json  visualize_phantom.py
pymrzeroxcat/MRXCAT_CMR_CINE/: cine_par.py  mrxcat_cmr_cine.py
pymrzeroxcat/MRXCAT_CMR_PERF/: mrxcat_cmr_perf.py
pymrzeroxcat/MRXCAT_PHANTOM_LGE/: add_infarct_segmentation.py  build_dynamic_phantom.py  build_static_phantom.py  compute_dynamic_parameters.py  lge_par.py  mrxcat_phantom_lge.py  tissues.json  visualize_binary.py
pymrzeroxcat/MRXCAT_PHANTOM_LGE/concentration_models/: fermi_concentration.py
